--- a/A4/Pulumi.dev.yaml
+++ b/A4/Pulumi.dev.yaml
@@ -1,7 +1,3 @@
 # Pulumi.dev.yaml
 config:
-#  azure:location: eastus
- # webapp:appName: "my-flask-app"
-#  webapp:sku: "F1"  # Free tier
- # webapp_runtime: "PYTHON|3.11"
- # azure-python-webapp:webapp_runtime: "PYTHON|3.11"
+  workspace_name: "<your-workspace-name>"
