adapted requirements.txt

--- a/A4/requirements.txt
+++ b/A4/requirements.txt
@@ -1,3 +1,4 @@
+Flask==2.0.2
 pulumi==3.50.0
 pulumi-azure-native==1.60.0
 azure-mgmt-resource==20.0.0
@@ -7,4 +8,4 @@ azure-identity==1.7.1
 azure-storage-blob==12.8.1
 azure-mgmt-applicationinsights==1.0.0
 requests==2.26.0
-unittest==0.0.1
+unittest2==1.1.0
