--- a/A2/Pulumi.yaml
+++ b/A2/Pulumi.yaml
@@ -1,4 +1,4 @@
-name: A2_Huber
+name: azure-resources
 runtime: yaml
 description: A minimal Azure Native Pulumi YAML program
 resources:
@@ -6,25 +6,28 @@ resources:
     type: azure-native:resources:ResourceGroup
     properties:
       resourceGroupName: ${resourceGroupName}  # Use the custom resource group name from configuration
-      location: ${location}  # Use the location from configuration
-  sa:
+      location: ${azure-native:location} # Use the location from configuration
+  storageAccount:
     type: azure-native:storage:StorageAccount
     properties:
       resourceGroupName: ${resourceGroup.name}
-      location: ${location}  # Use the location from configuration
+      location: ${azure-native:location}  # Use the location from configuration
       sku:
         name: ${skuName}  # Use the SKU from configuration
       kind: StorageV2
       accountName: ${storageAccountName}  # Use the storage account name from configuration
-variables:
-  storageAccountKeys:
-    fn::azure-native:storage:listStorageAccountKeys:
-      resourceGroupName: ${resourceGroup.name}
-      accountName: ${sa.name}
-config:
-  resourceGroupName: MyFirstResourceGroup  # Default resource group name
-  storageAccountName: mysfirsttorageaccount  # Default storage account name
-  skuName: Standard_LRS  # Default SKU
-  location: ukwest  # Default location
-outputs:
-  primaryStorageKey: ${storageAccountKeys.keys[0].value}
+
+#commands:
+# pulumi new azure-python (only if folder hasnt been creeated yet)
+# pulumi up
+#pulumi stack init devtest
+#pulumi config set azure-native:location northeurope
+#pulumi config set azure-resources:storageAccountName mystorageaccount
+#pulumi config set azure-resources:skuName Standard_LRS
+#pulumi config set azure-resources:resourceGroupName myResourceGroup
+#pulumi up
+
+# if i want the values from the "dev" config file to be used in the pulumi up command
+# I have to initialize a stack with the name "dev"
+
+# pulumi stack rm dev
